# cmake-gtest-example

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  observed-string.cpp  observed-string.h  rational.h  shuffle-access-iterator.h  string-observer.cpp  string-observer.h
tests/: test-observed-string.cpp  test-string-observer.cpp
w0/: CMakeLists.txt
w0/src/: main.cpp
w0/tests/: tests-math.cpp
w10/: input_generator.cpp
w10/input_generator/: CMakeLists.txt  input_generator.cpp
w11/: CMakeLists.txt  main.cpp
w12/: CMakeLists.txt  main.cpp
w4/src/: sequence-produce-iterator.h  shuffle-access-iterator.h
w5/: CMakeLists.txt
w5/alghoritms/: algo1.cpp  algo1.h  algo2.cpp  algo2.h  algo3.h  algo4.cpp  algo4.h  algo5.cpp  algo5.h  algo6.cpp  algo6.h  algo7.cpp  algo7.h
w5/benchmarks/: algo1-bench.cpp  algo2-bench.cpp  algo3-bench.cpp  algo4-bench.cpp  algo5-bench.cpp  algo6-bench.cpp  algo7-bench.cpp
w5/tests/: algo1-test.cpp  algo2-test.cpp  algo3-test.cpp  algo4-test.cpp  algo5-test.cpp  algo6-test.cpp  algo7-test.cpp
w6/: CMakeLists.txt  hash-table-bench.cpp  hash-table-find-insert-bench.cpp  hash-table-insert-bench.cpp  hash-table-insert-erase-bench.cpp  hash-table-test.cpp  hash-table.h
w7/: CMakeLists.txt  hash-table.h  magic-compare-test.cpp  magic-compare.cpp  magic-compare.h
w8/: CMakeLists.txt  main.cpp  paralel_unique.cpp  thread_pool.h
w9/: main.cpp  my-str.h
